# gitly

./: Cargo.toml  package.json  pnpm-lock.yaml
apps/desktop/: index.html  package.json  tailwind.config.cjs
apps/desktop/public/: index.html
apps/desktop/src/: App.tsx  main.tsx
apps/desktop/src/components/: PreviousRepos.tsx  RepoSidebar.tsx
apps/desktop/src/components/CommitLog/: CommitLog.tsx
apps/desktop/src/pages/: Repo.tsx  Welcome.tsx
crates/gitly-cli/: Cargo.toml
crates/gitly-cli/src/: main.rs
crates/gitly-git/: Cargo.toml
crates/gitly-git/src/: branches.rs  lib.rs  repository.rs
crates/gitly-storage/: Cargo.toml
crates/gitly-tauri/: Cargo.toml  tauri.conf.json
crates/gitly-tauri/capabilities/: default.json
crates/gitly-tauri/src/: commands.rs  lib.rs  main.rs
