[workspace]
resolver = "2"
members = [
  "crates/gitly-*",
]

[workspace.package]
authors = ["Pazl"]
edition = "2021"
version = "0.1.0"
description = "Git client"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1.0.96"

gitly-git = { path = "crates/gitly-git" }
gitly-storage = { path = "crates/gitly-storage" }
